# ibgepy

./: .gitignore  .zenodo.json  404.html  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
docs/: getting-started.md  guide.md  index.md  reference.md
getting-started/: index.html
guide/: index.html
reference/: index.html
search/: search_index.json
src/ibgepy/: __init__.py  _cache.py  _chunking.py  _client.py  _format.py  _msg.py  aggregates.py  localities.py  metadata.py  periods.py  sidra_url.py  subjects.py  surveys.py  validation.py  values.py  variables.py
tests/: test_chunking.py  test_format.py  test_sidra_parse.py  test_subjects.py  test_validation.py  test_values.py  test_variables_parse.py
