[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ibgepy"
version = "0.2.1"
description = "Access the IBGE Aggregate Data API (SIDRA) from Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "André Leite", email = "leite@castlab.org" },
    { name = "Hugo Vasconcelos", email = "hugo.vasconcelos@ufpe.br" },
    { name = "Diogo Bezerra", email = "diogo.bezerra@ufpe.br" },
    { name = "Marcos Wasiliew", email = "marcos.wasilew@gmail.com" },
    { name = "Carlos Amorim", email = "carlos.agaf@ufpe.br" },
]
keywords = ["IBGE", "SIDRA", "Brazil", "statistics", "open-data", "pandas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25",
    "pandas>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7", "responses>=0.23", "ruff>=0.1"]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/StrategicProjects/ibgepy"
Repository = "https://github.com/StrategicProjects/ibgepy"
Issues = "https://github.com/StrategicProjects/ibgepy/issues"
"R package (ibger)" = "https://github.com/StrategicProjects/ibger"

[tool.hatch.build.targets.wheel]
packages = ["src/ibgepy"]

[tool.ruff]
line-length = 100
target-version = "py39"
